tests/MathML/basic/bad/badTagPhantom2.mml
<math xmlns="http://www.w3.org/1998/Math/MathML"><mn>2</mn><mo>+</mo><mphantom><foo>14</foo></mphantom></math>